GNOME Bugzilla – Bug 742439
closed add user dialog crashes when network changes
Last modified: 2015-01-06 11:30:05 UTC
Created attachment 293902 [details] [review] fix crash when network changes Add user dialog crashes if it has been closed and network configuration changes, because the dialog is already disposed, but on_network_changes callback is executed. To fix this crash network monitor signal handler has to be disconnected on dispose. This bug was introduced in 3.9.6, so 3-10, 3-12, 3-14 stable branches are also affected and should be fixed. There is appropriate downstream bug: https://bugzilla.redhat.com/show_bug.cgi?id=1147316
Review of attachment 293902 [details] [review]: Use g_signal_connect_object() instead? That'd be a one-line change.
Created attachment 293912 [details] [review] fix crash when network changes I've thought that exists something like this function, but overlooked it in manual. Thanks that you pointed me on it!
Review of attachment 293912 [details] [review]: Looks good.
Comment on attachment 293912 [details] [review] fix crash when network changes Committed to master, gnome-3-14, 3-12 and 3-10. Thanks for review!