user-accounts: fix crash when network changes

Add user dialog crashes if it has been closed and network configuration
changes, because the dialog is already disposed, but on_network_changes
callback is executed. To fix this crash network monitor signal handler
has to be disconnected on dispose.

https://bugzilla.gnome.org/show_bug.cgi?id=742439